--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="//demo.productionready.io/main.css" />
     <style>
       body {
-        /* background-image: url('https://shorturl.at/9WqLc'); */
+        background-image: url('https://shorturl.at/OlsTD');
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
